| Bug #8740 | Server crash at start on Solaris 9 (64 bit) | ||
|---|---|---|---|
| Submitted: | 23 Feb 2005 18:03 | Modified: | 3 Mar 2005 17:20 |
| Reporter: | Joerg Bruehe | Email Updates: | |
| Status: | Closed | ||
| Category: | Server | Severity: | S1 (Critical) |
| Version: | 5.0.3-pre | OS: | Sun Solaris (Solaris 8, 9 + 10 (64 bit)) |
| Assigned to: | Sergey Gluhov | Target Version: | |
[23 Feb 2005 18:03]
Joerg Bruehe
[1 Mar 2005 15:32]
Joerg Bruehe
A crash with identical symptoms still occurs in a build based on ChangeSet 1.1774 05/03/01 01:59:37 petr@mysql.com +1 -0 Merge pchardin@bk-internal.mysql.com:/home/bk/mysql-5.0 into mysql.com:/home/cps/mysql/devel/im-fix-review It happens on Solaris 8, 9, and 10, 64 bit versions only. (previously, Solaris 10 could not be built due to a missing compiler license). Stack backtrace from Solaris 10: mysqldev@butch:~/butch-64bit> adb ./mysql-5.0.3-alpha/sql/mysqld ./test/mysql-standard-5.0.3-alpha-sun-solaris2.10-sparc-64bit/mysql-test/core core file = ./test/mysql-standard-5.0.3-alpha-sun-solaris2.10-sparc-64bit/mysql-test/core -- program `` ./mysql-5.0.3-alpha/sql/mysqld'' on platform SUNW,UltraAX-i2 SIGBUS: Bus Error $c init_one_value+0x60(100442, 100400, 1006cc000, 1006cc, 100400, 10058aa38) handle_options+0x2c(ffffffff7fffea4c, ffffffff7fffea40, 100588ab8, 100140330, ffffffff7fffea40, ffffffff7fffea40) __1cLget_options6Fippc_v_+0x8c(1006d1, 1006fcc80, 100400, 100141000, 100141, 100000) __1cVinit_common_variables6Fpkcippcp1_i_+0x1fc(100400, 1003e97d1, 1006d1060, 1006fcc80, 1006d16d8, 1005c5) main+0x40(9, ffffffff7fffecb8, 100400, ffffffff7d946a38, ffffffff7ee006c0, ffffffff7ee00700) _start+0x17c(0, 0, 0, 0, 0, 0) A tree is saved on 'butch' (Solaris 10) as '~/bug8740'.
[2 Mar 2005 10:59]
Alexander Barkov
ok to push.
[3 Mar 2005 13:25]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/22615
[3 Mar 2005 17:20]
Paul DuBois
Not in released versions, no changelog entry needed.
