Fix for bug#8740: Server crash at start on Solaris 9 (64 bit)